# formation-python

./: .gitattributes  .gitignore  LICENSE  README.md  SOMMAIRE.md  VSCODE-SETUP.md  pyproject.toml
01-fondamentaux-et-syntaxe/: 01-installation-et-configuration.md  02-variables-types-et-operateurs.md  03-structures-de-controle.md  04-fonctions-et-portee.md  05-gestion-des-erreurs.md  06-type-hints-et-annotations.md  README.md
01-fondamentaux-et-syntaxe-de-base/: 01-installation-et-configuration-environnement-python.md  02-variables-types-donnees-et-operateurs.md  03-structures-de-controle-if-else-boucles.md  04-fonctions-et-portee-des-variables.md  05-gestion-des-erreurs-avec-try-except.md  README.md
02-structures-de-donnees/: 01-listes-tuples-dicts-sets.md  02-comprehensions.md  03-collections-specialisees.md  04-chaines-et-regex.md  README.md
02-structures-de-donnees-avancees/: 01-listes-tuples-dictionnaires-et-sets.md  02-comprehensions-de-listes-et-dictionnaires.md  03-collections-specialisees-namedtuple-defaultdict-counter.md  04-manipulation-chaines-caracteres-et-expressions-regulieres.md  README.md
03-programmation-orientee-objet/: 01-classes-et-objets.md  02-heritage-et-polymorphisme.md  03-methodes-speciales-dunder-methods.md  03-methodes-speciales.md  04-proprietes-et-decorateurs.md  05-metaclasses-et-prog-avancee.md  05-metaclasses-et-programmation-avancee.md  README.md
04-gestion-des-donnees-et-fichiers/: 01-lecture-ecriture-de-fichiers-texte-et-binaires.md  02-formats-de-donnees-json-csv-xml.md  03-serialisation-avec-pickle.md  04-gestion-des-chemins-avec-pathlib.md  README.md
04-gestion-donnees-et-fichiers/: 01-lecture-ecriture-fichiers.md  02-formats-de-donnees.md  03-serialisation-pickle.md  04-gestion-chemins-pathlib.md  README.md
05-programmation-fonctionnelle/: 01-fonctions-lambda-et-fonctions-ordre-superieur.md  01-lambda-et-fonctions-ordre-superieur.md  02-map-filter-reduce.md  03-decorateurs-avances.md  04-generateurs-et-expressions-generatrices.md  04-generateurs.md  05-closures-et-prog-fonctionnelle.md  05-closures-et-programmation-fonctionnelle.md  README.md
06-modules-et-packages/: 01-importation-et-creation-de-modules.md  01-importation-et-creation-modules.md  02-structure-des-packages.md  03-gestion-dependances-pip.md  03-gestion-des-dependances-avec-pip.md  04-environnements-virtuels.md  05-outils-modernes-poetry-pipenv.md  README.md
07-bibliotheques-standard/: 01-os-sys-subprocess.md  02-datetime-et-time.md  03-math-random-statistics.md  04-itertools-et-functools.md  05-logging-et-configuration.md  06-typing-annotations-avancees.md  README.md
07-bibliotheques-standard-essentielles/: 01-os-sys-subprocess.md  02-datetime-et-time.md  03-math-random-statistics.md  04-itertools-et-functools.md  05-logging-et-configuration.md  README.md
08-programmation-concurrente/: 01-threading-et-multiprocessing.md  02-programmation-asynchrone-asyncio.md  02-programmation-asynchrone-avec-asyncio.md  03-gestion-des-verrous-et-synchronisation.md  03-verrous-et-synchronisation.md  04-patterns-de-concurrence.md  README.md
09-erreurs-et-debogage/: 01-hierarchie-des-exceptions.md  02-exceptions-personnalisees.md  03-techniques-de-debogage.md  04-profiling-et-optimisation.md  README.md
09-gestion-des-erreurs-et-debogage/: 01-hierarchie-des-exceptions.md  02-creation-exceptions-personnalisees.md  03-techniques-de-debogage.md  04-profiling-et-optimisation.md  README.md
10-tests-et-qualite/: 01-tests-unitaires-unittest-pytest.md  02-mocking-et-fixtures.md  03-couverture-de-code.md  04-documentation-docstrings.md  05-pep8-et-linting.md  06-validation-types-mypy.md  README.md
10-tests-et-qualite-du-code/: 01-tests-unitaires-avec-unittest-et-pytest.md  02-mocking-et-fixtures.md  03-couverture-de-code.md  04-documentation-avec-docstrings.md  05-pep-8-et-outils-de-linting.md  README.md
11-developpement-web-et-apis/: 01-frameworks-web-flask-ou-django-basics.md  01-introduction-frameworks-web.md  02-fastapi-framework-moderne.md  02-requetes-http-avec-requests.md  02.1-installation-premier-projet-fastapi.md  02.2-routes-et-validation-pydantic.md  02.3-endpoints-asynchrones.md  03-creation-et-consommation-apis-rest.md  03-flask-micro-framework.md  04-gestion-des-bases-de-donnees-avec-sqlite.md  04-requetes-http-requests.md  05-creation-consommation-apis-rest.md  06-bases-de-donnees-orm-sqlalchemy.md  06.1-introduction-sqlalchemy.md  README.md  (+2 more)
(+549 files in other folders)
